package edu.fiuba.algo3.Modelo.Vehiculo;

public interface Sentido {
  Posicion ejecutar(Posicion posicion);
}
