package edu.fiuba.algo3.modelo;

public interface Sorpresa {
  int activar(Vehiculo vehiculo,int movimientos);
}
